[type]:   fix [module]: resources [id]:     refs #260 [desc]:   Added a fix to stop flicker on color palette in IE.
git-svn-id: http://code.extjs.com/svn/ext/trunk@5400 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/visual/core.css
+++ b/resources/css/visual/core.css
@@ -40,6 +40,10 @@
     background-color: #deecfd;
 }
 
+.x-color-palette em:hover, .x-color-palette span:hover{   
+    background-color: #deecfd;
+}
+
 .x-color-palette em {
     border-color:#aca899;
 }
