--- a/resources/css/xtheme-gray.css
+++ b/resources/css/xtheme-gray.css
@@ -40,6 +40,10 @@
     background-color: #eaeaea;
 }
 
+.x-color-palette em:hover, .x-color-palette span:hover{   
+    background-color: #eaeaea;
+}
+
 .x-color-palette em {
     border-color:#aca899;
 }
